RESOLVED FIXED209185
REGRESSION(r256882): WebDriver commands that run before initial navigation do not complete
https://bugs.webkit.org/show_bug.cgi?id=209185
Summary REGRESSION(r256882): WebDriver commands that run before initial navigation do...
Blaze Burg
Reported 2020-03-17 09:55:05 PDT
.
Attachments
Patch (2.04 KB, patch)
2020-03-17 10:00 PDT, Blaze Burg
bweinstein: review+
Blaze Burg
Comment 1 2020-03-17 09:55:37 PDT
Blaze Burg
Comment 2 2020-03-17 10:00:16 PDT
Alex Christensen
Comment 3 2020-03-17 10:14:54 PDT
Comment on attachment 393763 [details] Patch This isn't a bad place to ensure there's a running process. It would be nice if we could just enqueue the messages instead like we do in AuxiliaryProcessProxy::sendMessage.
Chris Dumez
Comment 4 2020-03-17 10:59:49 PDT
Comment on attachment 393763 [details] Patch Seems fine.
Blaze Burg
Comment 5 2020-03-17 14:04:27 PDT
Note You need to log in before you can comment on or make changes to this bug.